--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-  <meta charset="UTF-8">
-  <title>vavila page</title>
+    <!-- Favicon -->
+    <link rel="icon" href="images/favIcon.jpg" type="image/png">
+
+
+    <meta charset="UTF-8">
+    <title>vavila page</title>
+    <!-- para invocar los estilos del archivo css -->
+    <link rel="stylesheet" href="estilo.css">
 </head>
+
 <body>
-  <h1>¡o melhor do mundo!</h1>
-  <p>Crack:</p>
-  <img src="images/ronaldinho.jpg" alt="ronaldinho" width="300">
-  <img src="images/perro.jpg" alt="ronaldinho" width="300">
+    <!-- Cabecera -->
+    <h1 class="estCeleste">¡o melhor do mundo!</h1>
+    <!-- class=nombreEstiloCss -->
+    <p class="estRojo">Crack:</p>
+    
+    <p class="estAzul">Hola, sitio web activo:</p>
+    <!-- Aplicamos el box del archivo css -->
+    <div class="box">
+        <!-- para importar una Imagen en la carpta de Images -->
+        <img src="images/ronaldinho.jpg" alt="ronaldinho" width="200">
+        <div class="box">
+            <img src="images/perro.jpg" alt="ronaldinho" width="300">
+        <div class="container">
+        <img src="images/viejoak.jpg" alt="Ak" width="400">
+
 </body>
+
 </html>
