--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
   <footer class="bg-success text-white text-center py-3">
     <p class="mb-0">&copy; DetoxNow - 2025</p>
   </footer>
+
   <!-- ACTIVIDAD 1 DE JAVASCRIPT INICIO -->
   <div>
   <label for="edadInput">Ingrese su edad:</label>
@@ -143,6 +144,21 @@
   <button id="botonEdad">Enviar</button>
   </div>
   <!-- ACTIVIDAD 1 DE JAVASCRIPT FIN -->
+
+  
+  <!-- ACTIVIDAD 29/08 DE Enviar Formulario a repositorio antiguo -->
+  <div id="myForm">
+    <h2>Formulario de Contacto</h2>
+    <form action="http://localhost:8082/api/v1/usuarios" method="get">
+        <!-- <form> -->
+        <label>ID:<input id="id" name="id"></label>        
+        <form id="usuarioForm">   
+    <button onclick="showAlert()">Click Me</button>
+  </div>
+  <!-- ACTIVIDAD 29/08 DE Enviar Formulario a repositorio antiguo -->
+   
+
+
 
   <p id="mensajeEdad" style="font-weight: bold; margin-top: 10px;"></p>
 
