--- a/index3.html
+++ b/index3.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="assets/style.css" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>VidaSana - Desintoxicantes y Batidos</title>
+  <title>GUAU&MIAU</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
@@ -12,7 +12,7 @@
   <!-- BARRA MENU -->
   <nav class="navbar navbar-dark bg-success">
     <div class="container-fluid d-flex justify-content-between align-items-center">
-      <a class="navbar-brand fw-bold" href="#">DetoxNow</a>
+      <a class="navbar-brand fw-bold" href="#">GUAU&MIAU</a>
       <div class="d-flex gap-2">
         <button class="btn btn-outline-light">😁🛒 Carrito</button>
         <button class="btn btn-outline-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebarMenu">☰</button>
@@ -67,7 +67,6 @@
         <!-- Card 1 -->
         <div class="col-md-4">
           <div class="card shadow-lg h-100">
-            <a href="#pago" class="btn btn-outline-success">Comprar</a>
             <img src="images/batidoverde.webp" class="card-img-top" alt="Batido Verde">
             <div class="card-body">
               <h5 class="card-title">Batido Verde Detox</h5>
