--- a/home.html
+++ b/home.html
@@ -13,6 +13,7 @@
   <nav class="navbar navbar-dark bg-success">
     <div class="container-fluid d-flex justify-content-between align-items-center">
       <a class="navbar-brand fw-bold" href="#">GUAU&MIAU</a>
+      
       <div class="d-flex gap-2">
         <button class="btn btn-outline-light">😁🛒 Carrito</button>
         <button class="btn btn-outline-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebarMenu">☰</button>
@@ -28,7 +29,10 @@
     <div class="offcanvas-body">
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link text-white" href="#productos">Productos</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="#pago">Pago</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="#pago">Registro</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="#pago">Iniciar Sesion</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="#pago">Blog</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="#pago">Contacto</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="#empresa">Sobre nosotros</a></li>
       </ul>
     </div>
