--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
           <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
         </ul>
         <div class="d-flex">
-          <a class="nav-link" href="#">Iniciar sesión</a>
-          <a class="nav-link" href="#">Registrar usuario</a>
+          <a class="nav-link" href="index2.html">Iniciar sesión</a>
+          <a class="nav-link" href="index3.html">Registrar usuario</a>
           <a class="nav-link position-relative" href="#">
             <i class="bi bi-cart"></i> Cart (0)
           </a>
