--- a/index3.html
+++ b/index3.html
@@ -1,104 +1,110 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <!-- CSS Local -->
-    <link rel="stylesheet" href="estilo.css">
     <meta charset="UTF-8">
-    <title>GUAU&MIAU - Registro</title>
-
-    <!-- Bootstrap CSS -->
+    <title>Bati-Duoc - Registro</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <style>
-        /* Estilo para el contenedor del carrusel y el formulario */
-        .carousel-container {
-            position: relative;
-            max-width: 5000px; /* Ajusta el ancho que quieras */
-            margin: 0 auto; /* Centrar horizontal */
-        }
-
-        /* Ajustamos las imágenes del carrusel para que tengan tamaño fijo */
-        .carousel-inner img {
-            height: 2000px; /* ajusta la altura deseada */
-            object-fit: cover;
-        }
-
-        /* Formulario centrado absolutamente */
-        form {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: rgba(255, 255, 255, 0.85); /* fondo semitransparente */
-            padding: 20px;
-            border-radius: 10px;
-            width: 90%;
-            max-width: 400px;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-        }
-
-        h1 {
-            font-size: 3em;
-            margin-top: 20px;
-            text-align: center;
-        }
-
-        h2 {
-            text-align: center;
-            margin-bottom: 15px;
-        }
-    </style>
 </head>
+
 <body>
+    <!-- NAVBAR estilo wireframe -->
+    <nav class="navbar navbar-expand-lg bg-light border-bottom">
+        <div class="container-fluid">
+            <a class="navbar-brand fw-bold" href="#">Bati-Duoc</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Productos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+                </ul>
+                <div class="d-flex">
+                    <div class="nav-item dropdown me-3">
+                        <a class="nav-link" href="index2.html">Iniciar sesión</a>
+                    </div>
+                    <div class="nav-item dropdown me-3">
+                        <a class="nav-link active" href="index3.html">Registrar usuario</a>
+                    </div>
+                    <div class="nav-item dropdown me-3">
+                        <a class="nav-link position-relative" href="#">
+                            <i class="bi bi-cart"></i> Cart (0)
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
 
-<div class="carousel-container">
-    <!-- Carrusel -->
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="images/perropresidente.jpeg" class="d-block w-100" alt="perrito">
-        </div>
-        <div class="carousel-item">
-            <img src="images/ronaldinho.jpg" class="d-block w-100" alt="ronaldinho">
-        </div>
-        <div class="carousel-item">
-            <img src="images/perro.jpg" class="d-block w-100" alt="perro">
+    <!-- Registro de usuario -->
+    <div class="container py-5">
+        <div class="row justify-content-center">
+            <div class="col-md-8 text-center mb-4">
+                <div class="mx-auto mb-3"
+                    style="width:120px;height:120px;border:2px solid #333;display:flex;align-items:center;justify-content:center;">
+                    <span class="fw-bold">[Imagen]</span>
+                </div>
+                <h1 class="fw-bold mb-4">Bati-Duoc</h1>
+            </div>
+            <div class="col-md-6">
+                <div class="card border">
+                    <div class="card-header bg-light fw-bold">Registro de usuario</div>
+                    <div class="card-body bg-light">
+                        <form>
+                            <div class="mb-3">
+                                <label for="nombre" class="form-label">Correo</label>
+                                <input type="text" class="form-control" id="nombre" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="password" class="form-label">Contraseña</label>
+                                <input type="password" class="form-control" id="password" required>
+                            </div>
+                            <div class="d-grid mt-4">
+                                <button type="submit" class="btn btn-dark btn-lg">Registrar</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
-    <!-- Formulario sobre el carrusel -->
-    <form action="index2.html" method="get">
-        <h1>¡Bienvenido a GUAU&MIAU!</h1>
-        <h2>Regístrate...</h2>
-
-        <div class="mb-3">
-            <label for="nombre" class="form-label">Nombre completo</label>
-            <input type="text" class="form-control" id="nombre" name="nombre" required>
+    <!-- FOOTER BASE -->
+    <footer class="bg-light border-top py-4 mt-5">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-4 mb-2 mb-md-0">
+                    <span class="fw-bold">Bati-Duoc</span>
+                </div>
+                <div class="col-md-4 mb-2 mb-md-0 text-center">
+                    <img src="https://img.icons8.com/color/96/visa.png" alt="Visa" style="width:40px; height:auto;" />
+                    <img src="https://img.icons8.com/color/96/mastercard.png" alt="MasterCard"
+                        style="width:40px; height:auto;" />
+                    <img src="https://img.icons8.com/color/96/paypal.png" alt="PayPal"
+                        style="width:40px; height:auto;" />
+                </div>
+                <div class="col-md-4 text-end">
+                    <form class="d-flex justify-content-end">
+                        <input type="email" class="form-control form-control-sm w-auto me-2" placeholder="Enter Email">
+                        <button class="btn btn-dark btn-sm">Suscribirse</button>
+                    </form>
+                </div>
+            </div>
         </div>
-
-        <div class="mb-3">
-            <label for="email" class="form-label">Correo electrónico</label>
-            <input type="email" class="form-control" id="email" name="email" required>
-            <div id="emailHelp" class="form-text">Nunca compartiremos tu correo con nadie más.</div>
+    </footer>
+    <section class="bg-light py-4 border-top">
+        <div class="container text-center">
+            <p class="mb-1">&copy; 2024 Bati-Duoc. Todos los derechos reservados.</p>
         </div>
-
-        <div class="mb-3">
-            <label for="password" class="form-label">Contraseña</label>
-            <input type="password" class="form-control" id="password" name="password" required>
-            <div id="passwordHelp" class="form-text">Epic games nunca pedirá tu contraseña...</div>
-        </div>
-
-        <div class="mb-3 form-check">
-            <input type="checkbox" class="form-check-input" id="terminos" required>
-            <label class="form-check-label" for="terminos">Acepto los términos y condiciones</label>
-        </div>
-
-        <button type="submit" class="btn btn-primary w-100">Crear cuenta</button>
-    </form>
-    </div>
-</div>
-
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
