--- a/index3.html
+++ b/index3.html
@@ -49,7 +49,7 @@
             <div class="col-md-8 text-center mb-4">
                 <div class="mx-auto mb-3"
                     style="width:120px;height:120px;border:2px solid #333;display:flex;align-items:center;justify-content:center;">
-                    <span class="fw-bold">[Imagen]</span>
+                    <a href="images"></a>
                 </div>
                 <h1 class="fw-bold mb-4">Bati-Duoc</h1>
             </div>
