--- a/index.html
+++ b/index.html
@@ -11,31 +11,38 @@
 
 <body>
   <!-- NAVBAR estilo wireframe -->
-  <nav class="navbar navbar-expand-lg bg-light border-bottom">
-    <div class="container-fluid">
-      <a class="navbar-brand fw-bold" href="#">Bati-Duoc</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Productos</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Nosotros</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
-        </ul>
-        <div class="d-flex">
-          <a class="nav-link" href="index2.html">Iniciar sesión</a>
-          <a class="nav-link" href="index3.html">Registrar usuario</a>
-          <a class="nav-link position-relative" href="#">
-            <i class="bi bi-cart"></i> Cart (0)
-          </a>
+    <nav class="navbar navbar-expand-lg bg-light border-bottom">
+        <div class="container-fluid">
+            <a class="navbar-brand fw-bold" href="#">Bati-Duoc</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Productos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+                </ul>
+                <div class="d-flex">
+                    <div class="nav-item dropdown me-3">
+                        <a class="nav-link" href="index2.html">Iniciar sesión</a>
+                    </div>
+                    <div class="nav-item dropdown me-3">
+                        <a class="nav-link active" href="index3.html">Registrar usuario</a>
+                    </div>
+                    <div class="nav-item dropdown me-3">
+                        <a class="nav-link position-relative" href="#">
+                            <i class="bi bi-cart"></i> Cart (0)
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </nav>
+    </nav>
 
 	<!-- SLIDE PRINCIPAL (NO MODIFICAR) -->
 	<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
