--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <a class="nav-link" href="index2.html">Iniciar sesión</a>
           <a class="nav-link" href="index3.html">Registrar usuario</a>
           <a class="nav-link position-relative" href="#">
-            <i class="bi bi-cart"></i> Cart (0)
+            <i class="bi bi-cart"></i> Carrito (0)
           </a>
         </div>
       </div>
