--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,7 @@
     <!-- NAVBAR estilo wireframe -->
     <nav class="navbar navbar-expand-lg bg-light border-bottom">
         <div class="container-fluid">
-            <a class="navbar-brand fw-bold" href="#">Bati-Duoc</a>
+            <a class="nav-link" href="index.html">Bati-Duoc </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
