--- a/productoPag.html
+++ b/productoPag.html
@@ -15,7 +15,7 @@
     <div class="container d-flex justify-content-between align-items-center">
       <div class="d-flex align-items-center gap-2">
         <div class="bg-dark" style="width:20px; height:20px;"></div>
-        <span class="fw-bold">Site Name</span>
+        <span class="fw-bold">Bati-Duoc</span>
       </div>
       <nav>
         <ul class="nav">
@@ -23,7 +23,7 @@
           <li class="nav-item"><a href="#" class="nav-link px-2">Productos</a></li>
           <li class="nav-item"><a href="#" class="nav-link px-2">Nosotros</a></li>
           <li class="nav-item"><a href="#" class="nav-link px-2">Blogs</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2">Contacto</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2">Co ntacto</a></li>
         </ul>
       </nav>
       <div class="d-flex align-items-center gap-1">
@@ -39,19 +39,17 @@
     <nav class="mb-3" aria-label="breadcrumb">
       <ol class="breadcrumb small">
         <li class="breadcrumb-item"><a href="#">Home</a></li>
-        <li class="breadcrumb-item"><a href="#">Category X</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Product Title</li>
+        <li class="breadcrumb-item"><a href="#">Batidos</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Frutos Rojos</li>
       </ol>
     </nav>
 
     <div class="row">
       <div class="col-md-7">
         <div class="product-images border p-2">
-          <div class="main-image border mb-2" style="height:300px; background:#f0f0f0;"></div>
+          <img src="images/batidoFrutosRojo.webp" class="d-block w-100" alt="batidoFrutosRojo">  
           <div class="thumbnail-images d-flex gap-2">
-            <div class="thumbnail border p-1 selected" style="width:60px; height:60px; background:#ddd;"></div>
-            <div class="thumbnail border p-1" style="width:60px; height:60px; background:#ddd;"></div>
-            <div class="thumbnail border p-1" style="width:60px; height:60px; background:#ddd;"></div>
+
           </div>
         </div>
       </div>
@@ -59,8 +57,8 @@
       <div class="col-md-5">
         <div class="product-info">
           <div class="d-flex justify-content-between align-items-center mb-3">
-            <h2 class="product-name">Nombre Producto</h2>
-            <span class="product-price fs-4 fw-bold">$100</span>
+            <h2 class="product-name">Batido de Frutos Rojos</h2>
+            <span class="product-price fs-4 fw-bold">$2.990</span>
           </div>
           <hr />
           <p class="product-description small text-justify">
@@ -83,19 +81,31 @@
 
     <hr class="my-4" />
 
-    <section class="related-products">
-      <h6 class="mb-3">Related Products</h6>
-      <div class="d-flex gap-3 overflow-auto">
-        <div class="related-item border" style="width:150px; height:100px; background:#ddd;"></div>
-        <div class="related-item border" style="width:150px; height:100px; background:#ddd;"></div>
-        <div class="related-item border" style="width:150px; height:100px; background:#ddd;"></div>
-        <div class="related-item border" style="width:150px; height:100px; background:#ddd;"></div>
-        <div class="related-item border" style="width:150px; height:100px; background:#ddd;"></div>
-      </div>
-    </section>
+  <section class="related-products">
+    <h6 class="mb-3">Batidos Relacionados</h6>
+    <div class="d-flex gap-3 overflow-auto">
+      <a href="#" class="related-item" data-product-id="1">
+        <img src="images/batidoverde.webp" alt="Batido Verde" class="img-fluid">
+      </a>
+      <a href="#" class="related-item" data-product-id="2">
+        <img src="images/LimonJengibre.webp" alt="Batido de Limon LimonJengibre" class="img-fluid">
+      </a>
+      <a href="#" class="related-item" data-product-id="3">
+        <img src="images/perropresidente.jpeg" alt="Batido de perro" class="img-fluid">
+      </a>
+      <a href="#" class="related-item" data-product-id="4">
+        <img src="images/batido4.webp" alt="Batido de Vainilla" class="img-fluid">
+      </a>
+      <a href="#" class="related-item" data-product-id="5">
+        <img src="images/batido5.webp" alt="Batido de Mango" class="img-fluid">
+      </a>
+    </div>
+  </section>
   </main>
 
   <!-- Bootstrap 5 JS Bundle CDN -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Tu JS personalizado -->
+  <script src="productos.js"></script>
 </body>
 </html>
