isra imagenes producto

--- a/index.html
+++ b/index.html
@@ -69,9 +69,7 @@
 
         <div class="col-md-3">
           <div class="card h-100">
-            <div class="bg-light" style="height:120px;display:flex;align-items:center;justify-content:center;">
-              <span>[Imagen]</span>
-            </div>
+             <img src="images/Imagenes_Batidos/Spinach smoothie.png" class="card-img-top" alt="Spinach Smoothie">
             <div class="card-body text-center">
               <a href="#" class="text-primary d-block mb-1">Product Title</a>
               <div class="mb-1">Atributos</div>
@@ -83,9 +81,7 @@
 
         <div class="col-md-3">
           <div class="card h-100">
-            <div class="bg-light" style="height:120px;display:flex;align-items:center;justify-content:center;">
-              <span>[Imagen]</span>
-            </div>
+                <img class = "img-fluid"src="images/Imagenes_Batidos/Banana smoothie with peanut butter.png" >
             <div class="card-body text-center">
               <a href="#" class="text-primary d-block mb-1">Product Title</a>
               <div class="mb-1">Atributos</div>
@@ -96,9 +92,7 @@
         </div>
         <div class="col-md-3">
           <div class="card h-100">
-            <div class="bg-light" style="height:120px;display:flex;align-items:center;justify-content:center;">
-              <span>[Imagen]</span>
-            </div>
+            <img class = "img-fluid"src="images/Imagenes_Batidos/Berry smoothie.png" >
             <div class="card-body text-center">
               <a href="#" class="text-primary d-block mb-1">Product Title</a>
               <div class="mb-1">Atributos</div>
@@ -109,9 +103,7 @@
         </div>
         <div class="col-md-3">
           <div class="card h-100">
-            <div class="bg-light" style="height:120px;display:flex;align-items:center;justify-content:center;">
-              <span>[Imagen]</span>
-            </div>
+            <img src="images/Imagenes_Batidos/Kale smoothie.png" >
             <div class="card-body text-center">
               <a href="#" class="text-primary d-block mb-1">Product Title</a>
               <div class="mb-1">Atributos</div>
@@ -122,8 +114,7 @@
         </div>
         <div class="col-md-3">
           <div class="card h-100">
-            <div class="bg-light" style="height:120px;display:flex;align-items:center;justify-content:center;">
-              <span>[Imagen]</span></div>
+         <img src="images/Imagenes_Batidos/Kiwi fruit smoothie.png" >
             <div class="card-body text-center"><a href="#" class="text-primary d-block mb-1">Product Title</a>
               <div class="mb-1">Atributos</div>
               <div class="fw-bold mb-2">$00.00</div>
@@ -133,8 +124,7 @@
         </div>
         <div class="col-md-3">
           <div class="card h-100">
-            <div class="bg-light" style="height:120px;display:flex;align-items:center;justify-content:center;">
-              <span>[Imagen]</span></div>
+              <img src="images/Imagenes_Batidos/Pineapple and mango smoothie.png" >
             <div class="card-body text-center"><a href="#" class="text-primary d-block mb-1">Product Title</a>
               <div class="mb-1">Atributos</div>
               <div class="fw-bold mb-2">$00.00</div>
@@ -144,8 +134,7 @@
         </div>
         <div class="col-md-3">
           <div class="card h-100">
-            <div class="bg-light" style="height:120px;display:flex;align-items:center;justify-content:center;">
-              <span>[Imagen]</span></div>
+                     <img src="images/Imagenes_Batidos/Protein smoothie.png" >
             <div class="card-body text-center">
               <a href="#" class="text-primary d-block mb-1">Product Title</a>
               <div class="mb-1">Atributos</div>
@@ -156,8 +145,7 @@
         </div>
         <div class="col-md-3">
           <div class="card h-100">
-            <div class="bg-light" style="height:120px;display:flex;align-items:center;justify-content:center;">
-              <span>[Imagen]</span></div>
+              <img src="images/Imagenes_Batidos/Spinach smoothie.png" >
             <div class="card-body text-center">
               <a href="#" class="text-primary d-block mb-1">Product Title</a>
               <div class="mb-1">Atributos</div>
