segundo comit isra

--- a/index.html
+++ b/index.html
@@ -69,11 +69,13 @@
 
         <div class="col-md-3">
           <div class="card h-100">
-             <img src="images/Imagenes_Batidos/Spinach smoothie.png" class="card-img-top" alt="Spinach Smoothie">
+             <img src="images/Imagenes_Batidos/Avocado smoothie.png" class="card-img-top" alt="Avocado smoothie">
             <div class="card-body text-center">
-              <a href="#" class="text-primary d-block mb-1">Product Title</a>
-              <div class="mb-1">Atributos</div>
-              <div class="fw-bold mb-2">$00.00</div>
+              <a href="#" class="text-primary d-block mb-1">Avocado smoothie</a>
+              <div class="mb-1">Atributos:
+             
+              </div>
+              <div class="fw-bold mb-2">$8.000</div>
               <a href="#" class="btn btn-outline-dark btn-sm">Comprar</a>
             </div>
           </div>
@@ -83,7 +85,7 @@
           <div class="card h-100">
                 <img class = "img-fluid"src="images/Imagenes_Batidos/Banana smoothie with peanut butter.png" >
             <div class="card-body text-center">
-              <a href="#" class="text-primary d-block mb-1">Product Title</a>
+              <a href="#" class="text-primary d-block mb-1">Batido de col rizada</a>
               <div class="mb-1">Atributos</div>
               <div class="fw-bold mb-2">$00.00</div>
               <a href="#" class="btn btn-outline-dark btn-sm">Comprar</a>
