--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<link rel="stylesheet" href="assets/style.css" />
+  <link rel="icon" type="image/x-icon" href="images/Bati-Duoc.png">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Bati-Duoc</title>
