--- a/index2.html
+++ b/index2.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/x-icon" href="images/Bati-Duoc.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Registro de Usuario | Bati-Duoc</title>
     <link rel="stylesheet" href="assets/style.css" />
