--- a/productoPag.html
+++ b/productoPag.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" type="image/x-icon" href="images/Bati-Duoc.png">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Producto</title>
   <!-- Bootstrap 5 CSS CDN -->
@@ -23,7 +24,7 @@
           <li class="nav-item"><a href="#" class="nav-link px-2">Productos</a></li>
           <li class="nav-item"><a href="#" class="nav-link px-2">Nosotros</a></li>
           <li class="nav-item"><a href="#" class="nav-link px-2">Blogs</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2">Co ntacto</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2">Contacto</a></li>
         </ul>
       </nav>
       <div class="d-flex align-items-center gap-1">
