--- a/index.html
+++ b/index.html
@@ -196,6 +196,8 @@
 	<section class="bg-light py-4 border-top">
 		<div class="container text-center">
 			<p class="mb-1">&copy; 2024 Bati-Duoc. Todos los derechos reservados.</p>
+		</div>
+	</section>
 </body>
 
 </html>
