Falta terminar descripcion

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
           <div class="card h-100">
              <img src="images/Imagenes_Batidos/Avocado smoothie.png" class="card-img-top" alt="Avocado smoothie">
             <div class="card-body text-center">
-              <a href="#" class="text-primary d-block mb-1">Avocado smoothie</a>
-              <div class="mb-1">Atributos:
+              <a href="#" class="text-primary d-block mb-1">Batipalta</a>
+              <div class="mb-1">Atributos: Suave, cremoso y tropical. Una mezcla refrescante de aguacate, kiwi, mango y naranja. Perfecto para quienes buscan energía y un sabor exótico en cada sorbo.
              
               </div>
               <div class="fw-bold mb-2">$8.000</div>
@@ -94,9 +94,9 @@
           <div class="card h-100">
                 <img class = "img-fluid"src="images/Imagenes_Batidos/Banana smoothie with peanut butter.png" >
             <div class="card-body text-center">
-              <a href="#" class="text-primary d-block mb-1">Batido de col rizada</a>
-              <div class="mb-1">Atributos</div>
-              <div class="fw-bold mb-2">$00.00</div>
+              <a href="#" class="text-primary d-block mb-1">BatiBanana</a>
+              <div class="mb-1">Atributos: Dulce, cremoso e irresistible. Solo tres ingredientes: plátano, mantequilla de maní y leche. Energía y sabor intenso en cada sorbo. ¡Un clásico que no falla!</div>
+              <div class="fw-bold mb-2">$7.000</div>
               <a href="#" class="btn btn-outline-dark btn-sm">Comprar</a>
             </div>
           </div>
@@ -105,9 +105,9 @@
           <div class="card h-100">
             <img class = "img-fluid"src="images/Imagenes_Batidos/Berry smoothie.png" >
             <div class="card-body text-center">
-              <a href="#" class="text-primary d-block mb-1">Product Title</a>
-              <div class="mb-1">Atributos</div>
-              <div class="fw-bold mb-2">$00.00</div>
+              <a href="#" class="text-primary d-block mb-1">BatiBerry</a>
+              <div class="mb-1">Atributos: Colorido, fresco y lleno de sabor. Una mezcla perfecta de frutos rojos, naranja y un toque dulce. Ideal para refrescar y sorprender en cualquier ocasión.</div>
+              <div class="fw-bold mb-2">$8.000</div>
               <a href="#" class="btn btn-outline-dark btn-sm">Comprar</a>
             </div>
           </div>
@@ -116,8 +116,8 @@
           <div class="card h-100">
             <img src="images/Imagenes_Batidos/Kale smoothie.png" >
             <div class="card-body text-center">
-              <a href="#" class="text-primary d-block mb-1">Product Title</a>
-              <div class="mb-1">Atributos</div>
+              <a href="#" class="text-primary d-block mb-1">Baticol</a>
+              <div class="mb-1">Atributos: Verde, fresco y nutritivo. Una mezcla de kale, manzana, aguacate y lima que combina dulzor y acidez. Energía natural y sabor vibrante para comenzar tu día.</div>
               <div class="fw-bold mb-2">$00.00</div>
               <a href="#" class="btn btn-outline-dark btn-sm">Comprar</a>
             </div>
